[metadata]
name = wkflws
version = attr: wkflws.__version__
author = Wkflws Contributors
description = "Wkflws Framework"
readme = "README.md"
license = { file="LICENSE" }
# url = https://wkflws.io/
project_urls =
    Bug Tracker = https://github.com/wkflws/wkflws/issues/
    Source = https://github.com/wkflws/wkflws/
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.10
packages = find:
include_package_data = True
install_requires =
    # JSONPath Parser, used for writing
    # License: Apache 2.0
    # https://github.com/h2non/jsonpath-ng/blob/master/LICENSE
    jsonpath-ng >= 1.5.3,<2
    # Data Modeling Framework
    # License: MIT
    # https://github.com/samuelcolvin/pydantic/blob/v1.9.0/LICENSE
    pydantic >= 1.10.0,<2.0
[options.extras_require]
kafka =
    # Official Kafka Client
    # License: Apache 2.0
    # https://github.com/confluentinc/confluent-kafka-python/blob/v1.8.2/LICENSE.txt
    confluent-kafka >= 1.8.2,<2.0
webhook =
    # Lightweight Asynchronous Web Framework
    # License: MIT
    # https://github.com/tiangolo/fastapi/blob/0.72.0/LICENSE
    fastapi >= 0.72.0,<0.73
    # Mature server and process manager
    # License: MIT
    # https://github.com/benoitc/gunicorn/blob/20.1.0/LICENSE
    gunicorn >= 20.1.0,<20.2.0
    # Asynchronous Python Web Application Server
    # License: BSD 3-clause
    # https://github.com/encode/uvicorn/blob/0.17.0/LICENSE.md
    uvicorn >= 0.17.0,<0.18.0
tracing =
    # Instrumentation helper
    # License:
    #
    opentelemetry-instrumentation
    opentelemetry-exporter-otlp
dev =
    # The following libraries are not hosted or distributed.
    watchgod  # better file watcher for uvicorn
docs =
    # The following libraries are not hosted or distributed.
    Sphinx  # generates documentation from source code
    sphinx-autodoc-typehints  # Include type hints in documentation
    sphinx-press-theme  # HTML theme
testing =
    # The following libraries are not hosted or distributed.
    black  # automatic formatter
    coverage  # unit test coverage analyzer
    flake8   # style checker
    flake8-docstrings   # verify docstring formatting
    flake8-import-order  # verify import order
    mypy  # static type checker
    pytest  # unit test discovery and runner
    pytest-cov  # plugin for the coverage module
    pytest-mock  # pytest wrapper for mock module
[options.entry_points]
console_scripts =
    wkflws = wkflws.command:main

# https://coverage.readthedocs.io/en/6.3.2/config.html
[coverage:run]
# Measure branch coverage
branch = True
# Omit certain files
# omit = # e.g. src/db/env.py,src/db/versions/*
# Define the directories to evaluate
source = wkflws/

[coverage:report]
# show missing line numbers
show_missing = True
# Omit files with 100% coverage from the report
# skip_covered = True

[tool:pytest]
testpaths = tests/